fixed bottom footer covering part of body content

--- a/_includes/styles.css
+++ b/_includes/styles.css
@@ -36,3 +36,7 @@ img {
 .vspace {
   margin-top: 35px;
 }
+
+body {
+    padding-bottom: 60px;
+}
